<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/export_help" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="15dp"
            android:hint="@string/export_format_hint"
            style="?attr/dropdownStyle">
            <AutoCompleteTextView
                android:id="@+id/dropdown_export_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/checkbox_export_encrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/export_encrypted"
            android:checked="true" />
        <TextView
            android:id="@+id/text_separate_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:text="@string/export_warning_password" />
        <TextView
            android:id="@+id/text_export_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/export_warning_unencrypted"
            android:textColor="?attr/colorError"
            android:visibility="gone" />
        <CheckBox
            android:id="@+id/checkbox_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/understand_risk_accept"
            android:checked="false"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/export_selected_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/export_all_groups"
            android:checked="true"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_selection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="15dp"
            android:hint="@string/export_choose_groups"
            android:visibility="gone"
            style="?attr/dropdownStyle">

            <com.android.authenticator.ui.components.DropdownCheckBoxes
                android:id="@+id/group_selection_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:allow_filtering="false" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
