...
        app:title="@string/pref_section_backups_title"
        app:summary="@string/pref_section_backups_summary" />

    <Preference
        android:fragment="com.android.authenticator.ui.fragments.preferences.ImportExportPreferencesFragment"
        app:icon="@drawable/ic_outline_construction_24"
        app:title="@string/pref_section_import_export_title"
        app:summary="@string/pref_section_import_export_summary" />

    <Preference
        android:fragment="com.android.authenticator.ui.fragments.preferences.AuditLogPreferencesFragment"
        app:icon="@drawable/ic_timeline_24"
        app:title="@string/pref_section_audit_log_title"
...
